fix text alignment

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -245,6 +245,10 @@ a:hover {
     color: #111;
 }
 
+p.cv-par {
+	text-align: center;
+}
+
 p, ul, ol, dl {
     -webkit-font-feature-settings: 'liga' 1, 'onum' 1, 'kern' 1;
     -moz-font-feature-settings: 'liga' 1, 'onum' 1, 'kern' 1;
